--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -2,9 +2,9 @@ body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
   background-image: url('gmu_homepage.jpeg');
-  min-height: 100%;
   background-position: center;
   background-size: cover;
   position: absolute;
-  width: 100%;
+  width: 98%;
+    height: 97%;
 }
