--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -18,15 +18,19 @@
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    SWE-645
+    <h3 style="text-align: center;font-size: 50px;color: white">SWE-645</h3>
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top"><a routerLink="/surveyform" >go to survey form </a></h1>
+    <h1 style="text-align: center;color:white" class="w3-jumbo w3-animate-top"><a style="color: white" routerLink="/surveyform" >Submit Survey Form </a></h1>
     <!-- <hr class="w3-border-grey" style="margin:auto;width:40%"> -->
-    <h1 class="w3-jumbo w3-animate-top"><a routerLink="/surveyrecords" >go to survey records </a></h1>
+    <h1 style="text-align: center;color: white;" class="w3-jumbo w3-animate-top"><a style="color: white" routerLink="/surveyrecords" >View Survey Records </a></h1>
+    <h3 style="text-align: center;color: white;" class="w3-jumbo w3-animate-top">Team: Vandana Keshavamurthy, Dhruv Rami, Madeline Fredriksz, Priya Ravichander</h3>
+
   </div>
  
 </div>
+ 
+<p></p>
 </body>
 
 
