--- a/src/app/surveyrecords/surveyrecords.component.html
+++ b/src/app/surveyrecords/surveyrecords.component.html
@@ -14,66 +14,6 @@
   </tr>
 </table>
 
-<!-- {{surveyrecords}}
-<table mat-table [dataSource] = "surveyrecords" class = "mat-elevation-z8"> 
-  
-  <ng-container matColumnDef = "firstname">
-     <th mat-header-cell *matHeaderCellDef> firstname</th>
-     <td mat-cell *matCellDef = "let element"> {{element.firstname}} </td>
-  </ng-container>
-  <ng-container matColumnDef = "lastname">
-    <th mat-header-cell *matHeaderCellDef> lastname</th>
-    <td mat-cell *matCellDef = "let element"> {{element.lastname}} </td>
- </ng-container>
- <ng-container matColumnDef = "city">
-  <th mat-header-cell *matHeaderCellDef> city</th>
-  <td mat-cell *matCellDef = "let element"> {{element.city}} </td>
-</ng-container>
-<ng-container matColumnDef = "streetAddress">
-  <th mat-header-cell *matHeaderCellDef> streetAddress</th>
-  <td mat-cell *matCellDef = "let element"> {{element.streetAddress}} </td>
-</ng-container>
-<ng-container matColumnDef = "zipcode">
-  <th mat-header-cell *matHeaderCellDef>zipcode</th>
-  <td mat-cell *matCellDef = "let element"> {{element.zipcode}} </td>
-</ng-container>
-<ng-container matColumnDef = "state">
-  <th mat-header-cell *matHeaderCellDef> state</th>
-  <td mat-cell *matCellDef = "let element"> {{element.state}} </td>
-</ng-container>
-<ng-container matColumnDef = "phone">
-  <th mat-header-cell *matHeaderCellDef> phone</th>
-  <td mat-cell *matCellDef = "let element"> {{element.phone}} </td>
-</ng-container>
-<ng-container matColumnDef = "email">
-  <th mat-header-cell *matHeaderCellDef> email</th>
-  <td mat-cell *matCellDef = "let element"> {{element.email}} </td>
-</ng-container>
-<ng-container matColumnDef = "recommendation">
-  <th mat-header-cell *matHeaderCellDef> recommendation</th>
-  <td mat-cell *matCellDef = "let element"> {{element.recommendation}} </td>
-</ng-container>
-<ng-container matColumnDef = "raffle">
-  <th mat-header-cell *matHeaderCellDef> raffle</th>
-  <td mat-cell *matCellDef = "let element"> {{element.raffle}} </td>
-</ng-container>
-<ng-container matColumnDef = "favorite">
-  <th mat-header-cell *matHeaderCellDef> favorite</th>
-  <td mat-cell *matCellDef = "let element"> {{element.favorite}} </td>
-</ng-container>
-<ng-container matColumnDef = "interest">
-  <th mat-header-cell *matHeaderCellDef> interest</th>
-  <td mat-cell *matCellDef = "let element"> {{element.interest}} </td>
-</ng-container>
-<ng-container matColumnDef = "date">
-  <th mat-header-cell *matHeaderCellDef> date</th>
-  <td mat-cell *matCellDef = "let element"> {{element.date}} </td>
-</ng-container>
-<ng-container matColumnDef = "comments">
-  <th mat-header-cell *matHeaderCellDef> comments</th>
-  <td mat-cell *matCellDef = "let element"> {{element.comments}} </td>
-</ng-container>
-  <tr mat-header-row *matHeaderRowDef = "columndefs"></tr>
-   <tr mat-row *matRowDef = "let row; columns: columndefs;"></tr>
+<h3 style="text-align: center;color: black;" class="w3-jumbo w3-animate-top">Team: Vandana Keshavamurthy, Dhruv Rami, Madeline Fredriksz, Priya Ravichander</h3>
 
-</table> -->
+
