--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,13 +6,10 @@
 
 
 
+<!--  Team: Madeline, Vandana, Dhruv, Priya
+Home page html. the landing page of the project
+-->
 
-
-<!-- <title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway"> -->
 
 <body>
 
@@ -22,7 +19,7 @@
   </div>
   <div class="w3-display-middle">
     <h1 style="text-align: center;color:white" class="w3-jumbo w3-animate-top"><a style="color: white" routerLink="/surveyform" >Submit Survey Form </a></h1>
-    <!-- <hr class="w3-border-grey" style="margin:auto;width:40%"> -->
+    
     <h1 style="text-align: center;color: white;" class="w3-jumbo w3-animate-top"><a style="color: white" routerLink="/surveyrecords" >View Survey Records </a></h1>
     <h3 style="text-align: center;color: white;" class="w3-jumbo w3-animate-top">Team: Vandana Keshavamurthy, Dhruv Rami, Madeline Fredriksz, Priya Ravichander</h3>
 
