--- a/src/app/success/success.component.css
+++ b/src/app/success/success.component.css
@@ -1,3 +1,6 @@
+/* Team: Madeline, Vandana, Dhruv, Priya 
+CSS for Success
+*/
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 body {
