--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,3 +1,6 @@
+<!--  Team: Madeline, Vandana, Dhruv, Priya
+Sucess reedirection page
+-->
 <html>
 <body>
 <div style="width:100%; height:100%;text-align: center;font-size: 60px;">
