--- a/src/app/surveyform/surveyform.component.css
+++ b/src/app/surveyform/surveyform.component.css
@@ -1,3 +1,6 @@
+/* Team: Madeline, Vandana, Dhruv, Priya 
+CSS for Survey form page
+*/
 body, h1, h2, h3, h4, h5 {
 	font-family: "Raleway", sans-serif
 }
